2008-08-15  Laurent Debacker <debackerl@gmail.com> 

	

2008-08-11  Laurent Debacker <debackerl@gmail.com> 

	* Button.cs: Make Click method virtual
	* ToggleButton.cs: Allow toggle buttons to display an arrow
	* VariantsCombinaisonSwitcher.cs: Introduction of variants combinaisons
	  switcher.
	* ToolBox.cs: Bugfix for size requests
	* VariantsCombinaison.cs: Bugfix for size requests, and hierachy
	* Ribbon.cs: Revert to previous version of Ribbon (I have opted for another
	  solution for variants combinaisons)
	* DropdownRibbonGroup.cs: Introduction of Drop down ribbon group

2008-08-05  Laurent Debacker <debackerl@gmail.com> 

	* GroupVariant.cs: Implementation of the concept of "variant" for Group.
	* VariantsCombinaison.cs: Implementation for the concept of variant
	  combinaisons.
	* Ribbon.cs: Migrating Ribbon to variants combinaisons.

2008-07-24  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Enhanced key tip theme
	* SyntheticWindow.cs: Debug code
	* RibbonGroup.cs: Avoid memory leak

2008-07-18  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenuItem.cs: Open/close menu on mouse hover, with timer
	* ApplicationMenu.cs: Reset default menu on button click

2008-07-17  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenu.cs: hide container when windows is hidden
	* ApplicationButton.cs: keep the app menu pressed while the app menu is
	  opened

2008-07-14  Laurent Debacker <debackerl@gmail.com> 

	* ApplicationMenuItem.cs: Text align fix, and delayed menu opening.
	* ApplicationMenu.cs: One hard-coded value removed

2008-07-11  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: More compliant app menu background, and new feature for buttons:
	  opaque background.
	* ApplicationMenu.cs: Opaque buttons, window offset.
	* ApplicationButton.cs: API update
	* BaseButton.cs: New feature: opaque background

2008-07-11  Laurent Debacker <debackerl@gmail.com> 

	* Theme.cs: Nicer menu items background