@@ -50,6 +50,7 @@
     <File name="GroupVariant.cs" subtype="Code" buildaction="Compile" />
     <File name="DropdownRibbonGroup.cs" subtype="Code" buildaction="Compile" />
     <File name="VariantsCombinaisonSwitcher.cs" subtype="Code" buildaction="Compile" />
+    <File name="KeyTip.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.10.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
