@@ -19,25 +19,25 @@ namespace Ribbons
 		
 		protected ColorScheme colorScheme = new ColorScheme ();
 		
-		internal void DrawKeyTip (Context cr, Point center, string label)
+		internal void DrawKeyTip (Context cr, Point reference, double horizontal_align, double vertical_align, Pango.Layout layout)
 		{
-			Pango.Layout layout = Pango.CairoHelper.CreateLayout (cr);
+			Pango.Layout min_layout = Pango.CairoHelper.CreateLayout (cr);
 			
-			layout.SetText ("O");
-			Pango.CairoHelper.UpdateLayout (cr, layout);
+			min_layout.SetText ("O");
+			Pango.CairoHelper.UpdateLayout (cr, min_layout);
 			int minWidth, minHeight;
-			layout.GetPixelSize (out minWidth, out minHeight);
+			min_layout.GetPixelSize (out minWidth, out minHeight);
 			
-			layout.SetText (label);
-			Pango.CairoHelper.UpdateLayout (cr, layout);
+			/*layout.SetText (label);
+			Pango.CairoHelper.UpdateLayout (cr, layout);*/
 			int lblWidth, lblHeight;
 			layout.GetPixelSize (out lblWidth, out lblHeight);
 			
 			int width = Math.Max (minWidth, lblWidth);
 			int height = Math.Max (minHeight, lblHeight);
 			
-			double x0 = center.X - (width >> 1), x1 = x0 + width;
-			double y0 = center.Y - (height >> 1), y1 = y0 + height;
+			double x0 = reference.X - (width * horizontal_align), x1 = x0 + width;
+			double y0 = reference.Y - (height * vertical_align), y1 = y0 + height;
 			
 			cr.LineWidth = 1.0;
 			
@@ -62,7 +62,8 @@ namespace Ribbons
 			grad.Destroy ();
 			
 			Pango.CairoHelper.UpdateLayout (cr, layout);
-			cr.MoveTo (center.X - lblWidth / 2, center.Y - lblHeight / 2);
+			cr.MoveTo (x0 + 1, y0 +1);
+			cr.Color = new Color (0, 0, 0);
 			Pango.CairoHelper.ShowLayout (cr, layout);
 		}
 		
