@@ -1,3 +1,15 @@
+2008-08-18  Laurent Debacker <debackerl@gmail.com> 
+
+	* QuickAccessToolbar.cs, Ribbon.cs: Add support for key tips.
+	* VariantsCombinaisonSwitcher.cs, ApplicationMenuItem.cs,
+	  VariantsCombinaison.cs, ApplicationMenu.cs, DropdownRibbonGroup.cs: Add
+	  summary.
+	* Gallery.cs: Add support for multi selection.
+	* Theme.cs: Update theme for key tips.
+	* SyntheticWindow.cs: Remove debug code.
+	* KeyTip.cs: Initial commit of KeyTip.
+	* ApplicationButton.cs: Support for key tips.
+
 2008-08-15  Laurent Debacker <debackerl@gmail.com> 
 
 	
